--- a/Client/src/app/messages/messages.component.html
+++ b/Client/src/app/messages/messages.component.html
@@ -35,7 +35,7 @@
       <h5>No messages</h5>
       }@else {
       <table class="table table-hover mt-3" style="cursor: pointer">
-        <thead class="table-success">
+        <thead>
           <tr>
             <th style="max-width: 75%">Message</th>
             <th style="max-width: 10%">From / To</th>
