--- a/Client/src/app/register/register.component.css
+++ b/Client/src/app/register/register.component.css
@@ -1,5 +1,5 @@
 .container-fluid {
-    background-color: rgba(204, 189, 204, 0.85);
+    background-color: #f7f7f7;
     border-radius: 1rem;
-    box-shadow: 0 0 8px rgb(47, 47, 140);
+    box-shadow: 0 0 8px #cccccc;
 }
