--- a/Client/src/app/admin/user-management/user-management.component.html
+++ b/Client/src/app/admin/user-management/user-management.component.html
@@ -16,14 +16,16 @@
       <form #form="ngForm" (submit)="getUsersWithRoles()">
         <div class="row g-1">
           <!--Username filter-->
-          <div class="col-md-8 col-lg-6 col-sm-8">
-            <label class="form-label">Username</label>
+          <div class="col-md-8 col-lg-6 col-sm-8 btn-group">
             <input
               type="text"
               class="form-control"
               name="username"
               [(ngModel)]="adminService.adminParams().username"
             />
+            <button class="btn btn-primary" type="submit">
+              <i class="bi bi-search"></i> Search
+            </button>
           </div>
         </div>
         <!--Action Buttons-->
@@ -31,15 +33,12 @@
           <div class="col-12 col-md-6 col-lg-6">
             <label class="form-label d-done d-md-block">&nbsp;</label>
             <div class="d-flex flex-wrap gap-1">
-              <button class="btn btn-primary" type="submit">
-                <i class="bi bi-send"></i> Apply filters
-              </button>
               <button
                 class="btn btn-info"
                 type="button"
                 (click)="resetFilters()"
               >
-                <i class="bi bi-arrow-clockwise"></i> Reset filters
+                <i class="bi bi-arrow-clockwise"></i> Refresh
               </button>
             </div>
           </div>
