--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -30,7 +30,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
               <div class="btn-group w-100 py-1">
                 <button class="btn btn-primary">
                   @if(hasLiked()) {
@@ -41,7 +41,7 @@
                   <i class="bi bi-envelope-fill"></i> Message
                 </button>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
