--- a/Client/src/app/nav/nav.component.css
+++ b/Client/src/app/nav/nav.component.css
@@ -8,21 +8,21 @@ img {
   display: inline;
 }
 a {
-  border-radius: 2rem;
+  border-radius: 0.4rem;
   transition: background-color 0.3s ease;
-  font-size: 0.9rem !important;
+  font-size: 1rem !important;
   color: white;
   font-weight: bold;
 }
 
 a:hover ,.dark-text:hover {
-  background-color: rgba(6, 1, 15,0.4);
-  color: rgb(243, 247, 248) !important;
+  background-color: white;
+  color: #009688 !important;
   transform: scale(1.02);
   transition: 0.5s ease-in-out;
 }
 nav {
-  background-color: rgb(34, 147, 159);
+  background-color: rgb(184, 50, 61);
   box-shadow: 0 0 8px rgb(1, 34, 37);
 }
 .home-hover:hover {
