--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -1,73 +1,98 @@
 <div class="container-fluid">
   <form [formGroup]="registerForm" autocomplete="off">
-  <h5 class="text-center">Sign up</h5>
-  <hr />
+    <div class="row">
+      <div class="col-12">
+        <h5 class="text-center">Sign up</h5>
+      </div>
+    </div>
+    <hr />
 
-  <div class="mb-3 text-start">
-    <label style="margin-right: 2rem"><b>Gender:</b></label>
-    <label class="form-check-label me-6">
-      <input
-        type="radio"
-        class="form-check-input"
-        value="male"
-        formControlName="gender"
-      />&nbsp;
-      <i class="bi bi-gender-male"></i> Male
-    </label>
-    &nbsp;&nbsp;
-    <label class="form-check-label">
-      <input
-        type="radio"
-        class="form-check-input"
-        value="female"
-        formControlName="gender"
-      />&nbsp;
-      <i class="bi bi-gender-female"></i> Female
-    </label>
-  </div>
-  <app-text-input
-    [formControl]="$any(registerForm.controls['username'])"
-    [label]="'Username'"
-  />
-    <app-text-input
-    [formControl]="$any(registerForm.controls['knownAs'])"
-    [label]="'Known As'"
-  />
-    <app-date-picker
-    [formControl]="$any(registerForm.controls['dateOfBirth'])"
-    [label]="'Date Of Birth'"
-    [maxDate]="maxDate"
-  />
-    <app-text-input
-    [formControl]="$any(registerForm.controls['city'])"
-    [label]="'City'"
-  />
-    <app-text-input
-    [formControl]="$any(registerForm.controls['country'])"
-    [label]="'Country'"
-  />
-  <app-text-input
-    [formControl]="$any(registerForm.controls['password'])"
-    [type]="'password'"
-    [label]="'Password'"
-  />
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3 text-start">
+        <label style="margin-right: 2rem"><b>Gender:</b></label>
+        <label class="form-check-label me-6">
+          <input
+            type="radio"
+            class="form-check-input"
+            value="male"
+            formControlName="gender"
+          />&nbsp; <i class="bi bi-gender-male"></i> Male
+        </label>
+        &nbsp;&nbsp;
+        <label class="form-check-label">
+          <input
+            type="radio"
+            class="form-check-input"
+            value="female"
+            formControlName="gender"
+          />&nbsp; <i class="bi bi-gender-female"></i> Female
+        </label>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-text-input
+          [formControl]="$any(registerForm.controls['username'])"
+          [label]="'Username'"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-text-input
+          [formControl]="$any(registerForm.controls['knownAs'])"
+          [label]="'Known As'"
+        />
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-date-picker
+          [formControl]="$any(registerForm.controls['dateOfBirth'])"
+          [label]="'Date Of Birth'"
+          [maxDate]="maxDate"
+        />
+      </div>
+    </div>
 
-  <app-text-input
-    [formControl]="$any(registerForm.controls['confirmPassword'])"
-    [type]="'password'"
-    [label]="'Confirm Password'"
-  />
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-text-input
+          [formControl]="$any(registerForm.controls['city'])"
+          [label]="'City'"
+        />
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-text-input
+          [formControl]="$any(registerForm.controls['country'])"
+          [label]="'Country'"
+        />
+      </div>
+    </div>
 
-  @if (validationErrors) {
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-text-input
+          [formControl]="$any(registerForm.controls['password'])"
+          [type]="'password'"
+          [label]="'Password'"
+        />
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+        <app-text-input
+          [formControl]="$any(registerForm.controls['confirmPassword'])"
+          [type]="'password'"
+          [label]="'Confirm Password'"
+        />
+      </div>
+    </div>
+
+    @if (validationErrors) {
     <div class="alert alert-danger text-start">
       <ul>
         @for (error of validationErrors; track $index) {
-          <li>{{error}}</li>
+        <li>{{ error }}</li>
         }
       </ul>
     </div>
-  }
-  <!-- <div class="mb-3 form-floating">
+    }
+    <!-- <div class="mb-3 form-floating">
     <input
       [class.is-invalid]="
         registerForm.get('confirmPassword')?.errors &&
@@ -92,20 +117,20 @@
       Confirm password must match password.
     </div>
   </div> -->
-  <div class="form-group text-center p-2">
-    <button 
-      class="btn btn-success me-2" 
-      type="submit" 
-      (click)="Register()"
-      [disabled]="!registerForm.valid"
+    <div class="form-group text-center p-2">
+      <button
+        class="btn btn-success me-2"
+        type="submit"
+        (click)="Register()"
+        [disabled]="!registerForm.valid"
       >
-      <i class="bi bi-hand-index-fill"></i> Register
-    </button>
-    <button class="btn btn-danger me-2" type="submit" (click)="Cancel()">
-      <i class="bi bi-x-circle"></i> Cancel
-    </button>
-  </div>
-  <!-- <div class="mb-3">
+        <i class="bi bi-hand-index-fill"></i> Register
+      </button>
+      <button class="btn btn-danger me-2" type="submit" (click)="Cancel()">
+        <i class="bi bi-x-circle"></i> Cancel
+      </button>
+    </div>
+    <!-- <div class="mb-3">
       <label>Who is your favorite user?</label>
       <select class="form-select">
         @for(user of usersFromHomeComp(); track $index){
@@ -113,7 +138,7 @@
         }
       </select>
     </div> -->
-</form>
+  </form>
 </div>
 
 <!-- <p>Form value: {{ registerForm.value | json }}</p>
