--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -10,7 +10,7 @@
 
   <!--Main content-->
   <div class="row g-4">
-    <div class="col-12 col-lg-4 order-1 order-lg-1">
+    <div class="c col-xs-8 col-sm-8 col-md-8 col-lg-4 col-xl-4 order-1 order-lg-1">
       <div class="card">
         <!--Profile info-->
         <div class="card-body">
@@ -47,7 +47,7 @@
       </div>
     </div>
     <!---->
-    <div class="col-12 col-lg-8 order-2 order-lg-2">
+    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 col-xl-8 order-2 order-lg-2">
       <div class="card">
         <div class="card-body">
           <tabset class="member-tabset" #memberTabs>
