--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -85,7 +85,7 @@
           name="password"
           [(ngModel)]="model.password"
         />
-        <button class="btn btn-success text-start" type="submit">
+        <button class="btn btn-info text-start" type="submit">
           <!-- <i class="bi bi-person-fill-up"></i>  -->
           Login
         </button>
