--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -10,7 +10,7 @@
       <button (click)="registerToggle()" class="btn btn-primary btn-lg me-2">
         Register
       </button>
-      <button class="btn btn-info btn-lg me-2">Learn More</button>
+      <a routerLink="/about-us" class="btn btn-info btn-lg me-2">Learn More</a>
     </div>
     }@else {
     <div class="containder">
