--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -22,8 +22,8 @@
     </div>
   </div>
   <!--Main content-->
-  <div class="row g-4">
-    <div class="col-12 col-lg-4 col-xl-4 order-1 order-lg-1">
+  <div class="row g-2">
+    <div class="col-xs-10 col-sm-10 col-md-7 col-lg-4 col-xl-4 order-1 order-lg-1">
       <div class="card">
         <!--Profile info-->
         <div class="card-header mt-3">
@@ -59,7 +59,7 @@
       </div>
     </div>
     <!--Edit form-->
-    <div class="col-12 col-lg-8 col-xl-8 order-2 order-lg-2">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 order-2 order-lg-2">
       <div class="card">
         <div class="card-body">
           <tabset class="member-tabset">
