--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -8,7 +8,7 @@
     <hr />
 
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3 text-start">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3 text-start">
         <label style="margin-right: 2rem"><b>Gender:</b></label>
         <label class="form-check-label me-6">
           <input
@@ -28,7 +28,7 @@
           />&nbsp; <i class="bi bi-gender-female"></i> Female
         </label>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-text-input
           [formControl]="$any(registerForm.controls['username'])"
           [label]="'Username'"
@@ -36,13 +36,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-text-input
           [formControl]="$any(registerForm.controls['knownAs'])"
           [label]="'Known As'"
         />
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-date-picker
           [formControl]="$any(registerForm.controls['dateOfBirth'])"
           [label]="'Date Of Birth'"
@@ -52,13 +52,13 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-text-input
           [formControl]="$any(registerForm.controls['city'])"
           [label]="'City'"
         />
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-text-input
           [formControl]="$any(registerForm.controls['country'])"
           [label]="'Country'"
@@ -67,14 +67,14 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-text-input
           [formControl]="$any(registerForm.controls['password'])"
           [type]="'password'"
           [label]="'Password'"
         />
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
         <app-text-input
           [formControl]="$any(registerForm.controls['confirmPassword'])"
           [type]="'password'"
