Updated API to use SQL server and and be able to be hosted and take accept API calls form hosted client.  Updated Client side and hosted it on Netlify

--- a/Client/src/app/admin/photo-management/photo-management.component.html
+++ b/Client/src/app/admin/photo-management/photo-management.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     @if (!photoService.paginatedResult()?.items ||
     photoService.paginatedResult()?.items?.length === 0) {
-    <h5>No Photos</h5>
+     <div class="alert alert-info">
+      <i class="bi bi-info-circle-fill"></i> No photos.
+    </div>
     } @for (photo of photoService.paginatedResult()?.items; track photo.id) {
     <div class="col-12 col-md-3 col-sm-4 col-lg-2 col-xl-2">
       <img src="{{ photo.url }}" alt="users photo" class="img-thumbnail mb-1" />
