--- a/Client/src/app/admin/admin-panel/admin-panel.component.html
+++ b/Client/src/app/admin/admin-panel/admin-panel.component.html
@@ -1,4 +1,6 @@
-<h2>Admin Panel</h2>
+<app-heading>
+    <span heading-title>Admin Panel</span>
+</app-heading>
 <div class="tab-panel">
     <tabset class="member-tabset">
         <tab heading="User Management" *appHasRole="['Admin']">
