--- a/Client/src/app/admin/user-management/user-management.component.html
+++ b/Client/src/app/admin/user-management/user-management.component.html
@@ -1,15 +1,4 @@
 <div class="container-fluid">
-  <!--Header-->
-  <div class="row">
-    <div class="col-12 text-start mt-2">
-      <h4>
-        Users found :
-        <span class="text-success">
-          {{ adminService.paginatedResult()?.pagination?.totalItems }}
-        </span>
-      </h4>
-    </div>
-  </div>
   <!--Filters serction-->
   <div class="row">
     <div class="col-12 mt-3">
@@ -19,12 +8,12 @@
           <div class="col-md-8 col-lg-6 col-sm-8 btn-group">
             <input
               type="text"
-              class="form-control"
+              class="form-control search-input"
               name="username"
               [(ngModel)]="adminService.adminParams().username"
             />
             <button class="btn btn-primary" type="submit">
-              <i class="bi bi-search"></i> Search
+              <i class="bi bi-search"></i>
             </button>
           </div>
         </div>
@@ -43,17 +32,34 @@
             </div>
           </div>
         </div>
+              @if (adminService.paginatedResult()?.pagination?.totalItems) {
+      <div class="d-flex justify-content-end pagination">
+        Page size: &nbsp;
+        <select
+          class="form-select"
+          name="pageSize"
+          style="width: 5rem"
+          (change)="getUsersWithRoles()"
+          [(ngModel)]="adminService.adminParams().pageSize"
+        >
+          @for (size of pageSizeList; track $index) {
+          <option [value]="size">{{ size }}</option>
+          }
+        </select>
+      </div>
+      }
       </form>
     </div>
   </div>
+  @if (adminService.paginatedResult()?.pagination?.totalItems) {
   <!--Users table-->
-  <div class="row">
-    <table class="table">
+  <div class="row table-scroll mt-1">
+    <table class="table-hover data-table">
       <thead>
         <tr>
-          <th style="max-width: 30%">Username</th>
-          <th style="max-width: 40%">Active Roles</th>
-          <th style="max-width: 30%"></th>
+          <th>Username</th>
+          <th>Active Roles</th>
+          <th>---</th>
         </tr>
       </thead>
       <tbody>
@@ -63,11 +69,7 @@
           <td>{{ user.username }}</td>
           <td>{{ user.roles }}</td>
           <td>
-            <button
-              (click)="openRolesModal(user)"
-              class="btn btn-info"
-              style="width: 6.5rem"
-            >
+            <button (click)="openRolesModal(user)" class="btn btn-info">
               <i class="bi bi-pencil-square"></i> Edit Roles
             </button>
           </td>
@@ -76,9 +78,12 @@
       </tbody>
     </table>
   </div>
+     <div class="d-flex justify-content-between pagination">
+      <p>{{ pages }}</p>
+      <p>{{ items }}</p>
+    </div>
   <!--Pagination-->
 
-  @if (adminService.paginatedResult()?.pagination) {
   <div class="row mt-4">
     <div class="col-12 d-flex justify-content-center">
       <pagination
@@ -89,7 +94,7 @@
         "
         (pageChanged)="pageChanged($event)"
         [(ngModel)]="adminService.paginatedResult()!.pagination!.currentPage"
-        [maxSize]="10"
+        [maxSize]="5"
         previousText="&lsaquo;"
         nextText="&rsaquo;"
         firstText="&laquo;"
