--- a/Client/src/app/members/member-card/member-card.component.html
+++ b/Client/src/app/members/member-card/member-card.component.html
@@ -5,55 +5,50 @@
       alt="{{ member().knownAs }}"
       class="card-img-top"
     />
-    @if (showButtons()) {
-    <ul class="list-inline member-icons animate text-center">
-      <li class="list-inline-item">
-        <button routerLink="/members/{{ member().username }}" class="btn">
-          <i class="bi bi-person-fill"></i>
-        </button>
-      </li>
-      <li class="list-inline-item">
-        <button (click)="toggleLike()" class="btn">
-          @if (hasLiked()) {
-          <i class="bi bi-heart-fill text-danger"></i>
-          }@else{
-          <i class="bi bi-heart-fill"></i>
-          }
-        </button>
-      </li>
-      <li class="list-inline-item">
-        <button
-          class="btn btn"
-          routerLink="/members/{{ member().username }}"
-          [queryParams]="{ tab: 'Messages' }"
-        >
-          <i class="bi bi-envelope-fill"></i>
-        </button>
-      </li>
-    </ul>
-    }
   </div>
   <div class="card-body p-1 text-muted">
-    <p class="card-title text-center mb-1">
+    @if (showButtons()) {
+      <div class="d-flex g-2">
+         <button routerLink="/members/{{ member().username }}" class="btn">
+            <i class="bi bi-person-fill"></i>
+          </button>
+          <button (click)="toggleLike()" class="btn">
+            @if (hasLiked()) {
+              <i class="bi bi-heart-fill text-danger"></i>
+            } @else {
+              <i class="bi bi-heart-fill"></i>
+            }
+          </button>
+           <button
+            class="btn btn"
+            routerLink="/members/{{ member().username }}"
+            [queryParams]="{ tab: 'Messages' }"
+          >
+            <i class="bi bi-envelope-fill"></i>
+          </button>
+      </div>
+    }
+    <p class="card-title mb-1 px-2">
       <b>
-        @if (isOnline()){
-        <span [class.is-online]="isOnline()">Online</span>
-        <br>
-        } 
+        @if (isOnline()) {
+          <span [class.is-online]="isOnline()">Online</span>
+          <br />
+        }
         <!-- @else {
         <span class="text-danger">Offline</span>
         } -->
-        @if (member().gender.toLowerCase() === 'female') {
-        <i class="bi bi-person-standing-dress fs-5"></i>
-        }@else {
-        <i class="bi bi-person-standing fs-5"></i>
+        @if (member().gender.toLowerCase() === "female") {
+          <i class="bi bi-person-standing-dress fs-5"></i>
+        } @else {
+          <i class="bi bi-person-standing fs-5"></i>
         }
-        {{ member().knownAs }}, {{ member().age }} Yrs @if (hasLiked()){
-        <i class="bi bi-heart-fill text-danger"></i>
+        {{ member().knownAs }}, {{ member().age }} Yrs
+        @if (hasLiked() && !showButtons()) {
+          <i class="bi bi-heart-fill text-danger"></i>
         }
       </b>
     </p>
-    <p class="card-text text-center">
+    <p class="card-text px-2">
       <i class="bi bi-geo-alt-fill"></i>
       {{ member().city }},{{ member().country }}
     </p>
