--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -1,13 +1,9 @@
 
 <div class="container-fluid">
   <!--Header row-->
-  <div class="row">
-    <div class="col-12">
-      <h3 class="text-center">{{ member.knownAs }}'s profile</h3>
-      <hr />
-    </div>
-  </div>
-
+  <app-heading>
+    <span heading-title>{{ member.knownAs }}'s profile</span>
+  </app-heading>
   <!--Main content-->
   <div class="row g-4">
     <div class="c col-xs-8 col-sm-8 col-md-8 col-lg-4 col-xl-4 order-1 order-lg-1">
